# rocket-template

./: Cargo.toml  README.md  build.rs  rust-toolchain  rust-toolchain.toml
.github/workflows/: rust.yml
public/: package-lock.json  package.json  tailwind.config.js
public/html/: index.html
public/html/components/: base.html
src/: main.rs
